<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="bigi.slonovoz.ScrollingOnas"
    tools:showIn="@layout/activity_scrolling_onas"
    android:background="#d9ecf0">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardElevation="6dp">
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/large_text"
        android:id="@+id/textView"
            android:textStyle="bold"
            android:textColor="@color/abc_primary_text_material_light"
            android:textSize="15sp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" />
    </android.support.v7.widget.CardView>


    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardElevation="6dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nagal"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/abc_primary_text_material_light"
            android:textSize="15sp"
            android:textStyle="bold"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" />
    </android.support.v7.widget.CardView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_gravity="center_horizontal" />
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardElevation="6dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onas2"
            android:id="@+id/onas2"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/abc_primary_text_material_light"
            android:textSize="15sp"
            android:textStyle="bold"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" />
    </android.support.v7.widget.CardView>
    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_gravity="center_horizontal" />



    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardElevation="6dp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nazad"
            android:id="@+id/button2"
            android:layout_gravity="center_horizontal"
            android:background="#7cffd3"
            android:textStyle="bold" />
    </android.support.v7.widget.CardView>
</LinearLayout>

</android.support.v4.widget.NestedScrollView>
