<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="bigi.slonovoz.MainActivity"

    android:scrollbars="none"
    android:orientation="vertical"
    android:background="#d9ecf0">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Space
            android:layout_width="match_parent"
            android:layout_height="6dp" />
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardElevation="6dp"
            android:layout_gravity="right|top"
            android:layout_below="@+id/space"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/caligj"
                android:id="@+id/textView3"
                android:textStyle="bold"
                android:textColor="#778e97"
                android:layout_below="@+id/textView7"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sred"
                android:id="@+id/textView4"
                android:textStyle="bold"
                android:textColor="#778e97"
                android:layout_below="@+id/textView7"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editText4m"
                android:layout_below="@+id/textView3"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/textView3"
                android:layout_alignEnd="@+id/textView3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textView54m"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/textView4"
                android:textStyle="bold"
                android:layout_alignLeft="@+id/textView4"
                android:layout_alignStart="@+id/textView4"
                android:layout_alignBottom="@+id/editText24m" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/podsjit"
                android:id="@+id/button34m"
                android:background="#7cffd3"
                android:textColor="#778e97"
                android:textStyle="bold"
                android:layout_below="@+id/editText4m"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kolgruz"
                android:id="@+id/textView6"
                android:textStyle="bold"
                android:textColor="#778e97"
                android:layout_alignTop="@+id/textView3"
                android:layout_centerHorizontal="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editText24m"
                android:layout_below="@+id/textView6"
                android:layout_alignLeft="@+id/textView6"
                android:layout_alignStart="@+id/textView6"
                android:layout_alignRight="@+id/textView6"
                android:layout_alignEnd="@+id/textView6" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Yznaisvoi"
                android:id="@+id/textView7"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textStyle="bold"
                android:textColor="#778e97"
                android:gravity="center_horizontal"
                android:padding="4dp" />

        </RelativeLayout>
        </android.support.v7.widget.CardView>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:cardElevation="6dp"
                android:layout_gravity="right|top"
                android:layout_below="@+id/space"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView2"
                    android:src="@drawable/podabez"
                    android:scaleType="fitCenter"
                    android:longClickable="false"
                    android:cropToPadding="false"
                    android:adjustViewBounds="true"
                    android:layout_below="@+id/space"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
            </android.support.v7.widget.CardView>
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"

                android:id="@+id/space" />
        </RelativeLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:cardElevation="6dp"
                android:layout_gravity="right|top"

                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:src="@drawable/bezpoda"
                    android:scaleType="fitStart"
                    android:longClickable="false"
                    android:cropToPadding="false"
                    android:adjustViewBounds="true"
                    android:layout_below="@+id/space"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
            </android.support.v7.widget.CardView>
        </RelativeLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:cardElevation="6dp"
                android:layout_gravity="right|top"

                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:src="@drawable/podag2"
                    android:scaleType="fitStart"
                    android:longClickable="false"
                    android:cropToPadding="false"
                    android:adjustViewBounds="true"
                    android:layout_below="@+id/space"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
            </android.support.v7.widget.CardView>
        </RelativeLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="80dp" />


    </LinearLayout>
</ScrollView>